--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,38 +1,150 @@
+/* ------------------------
+GLOBAL
+-------------------------- */
+body{
+  background: url(https://www.youngisthan.in/wp-content/uploads/2015/07/good-friends-best-friends.jpg) no-repeat center center fixed; 
+  background-size: cover;
+  font-family: 'Asap', sans-serif;
+}
+
+hr{
+  border:.5px solid rgb(162, 162, 162);
+}
+#survey{
+  margin-left:2.5%;
+  margin-right:62.5%;
+  margin-top:2%;
+  margin-bottom:7.5%;
+  background-color:rgb(255, 255, 255, .85);
+  padding:1.5%;
+  border-radius:10px; 
+}
+/* ------------------------
+SECTION
+-------------------------- */
+section{
+  background-color:rgb(255, 255, 255, .85);
+   
+  
+    margin-left:30%;
+    margin-right:30%;
+    margin-top:10%;
+    margin-bottom:10%;
+
+    padding:1.5%;
+    border-radius:10px; 
+}
+
+h1{
+  color:rgb(107, 107, 250);
+  font-size:40px;
+  font-weight:900;
+  font-family: 'Black Han Sans', sans-serif;
+}
+
+h2{
+  font-size:20px;
+  font-weight:900;
+  margin-top:15px;
+  margin-bottom:10px;
+  font-family: 'Black Han Sans', sans-serif;
+  
+}
+
+p{
+
+}
+
+button{
+  width:120px;
+  height:40px;
+  background:rgb(107, 107, 250);
+  padding:.5% 1%;
+  border-radius:25px;
+  color:white;
+  font-weight:bolder;
+  font-size:11px;
+  margin-top:20px;
+}
+/* ------------------------
+FOOTER 
+-------------------------- */
+
 footer {
-    background-color: rgb(48, 47, 41);
-    height: 70px;
-    position: fixed;
-    width:100%;
-    border-top: 3px rgb(0, 104, 168) solid;
-    bottom: 0;
-    
+  background-color: rgb(48, 47, 41);
+  height: 70px;
+  position: fixed;
+  width:100%;
+  border-top: 3px rgb(0, 104, 168) solid;
+  bottom: 0;
+}
+
+footer img {
+  width: 40px;
+  text-align: center;
+  margin: auto;
+  position: relative;
+}
+
+.footer-container {
+  text-align: center;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#github {
+  border-radius: 50%;
+  margin: 10px;
+}
+
+#linkedin {
+  border-radius: 6%;
+  margin: 10px;
+  width: 35px;
+}
+
+#gmail {
+  border-radius: 5%;
+  margin: 10px;
+  margin-bottom: 10px;
+  width: 35px;
+}
+
+
+
+@media only screen and (max-width: 1080px) {
+  section{
+      margin-left:20%;
+      margin-right:20%;
+      margin-top:10%;
+      margin-bottom:20%;
+      background-color:rgb(255, 255, 255, .85);
+      padding:1.5%;
+      border-radius:10px; 
   }
-  
-  footer img {
-    width: 40px;
-    text-align: center;
-    margin: auto;
-    position: relative;
+}
+
+@media only screen and (max-width: 900px) {
+  section{
+      margin-left:10%;
+      margin-right:10%;
+      margin-top:10%;
+      margin-bottom:10%;
+      background-color:rgb(255, 255, 255, .85);
+      padding:1.5%;
+      border-radius:10px; 
   }
-  
-  .footer-container {
-    text-align: center;
+}
+
+@media only screen and (max-width: 680px) {
+  section{
+      margin-left:10%;
+      margin-right:10%;
+      margin-top:10%;
+      margin-bottom:10%;
+      background-color:rgb(255, 255, 255, .85);
+      padding:1.5%;
+      border-radius:10px; 
   }
-  
-  #github {
-    border-radius: 50%;
-    margin: 10px;
-  }
-  
-  #linkedin {
-    border-radius: 6%;
-    margin: 10px;
-    width: 35px;
-  }
-  
-  #gmail {
-    border-radius: 5%;
-    margin: 10px;
-    margin-bottom: 10px;
-    width: 35px;
-  }
+}
