--- a/app/public/assets/css/friends.css
+++ b/app/public/assets/css/friends.css
@@ -22,7 +22,7 @@ body{
   /* ------------------------
   SECTION
   -------------------------- */
-  section{
+ #main{
     background-color:rgb(255, 255, 255, .85);
      
     
@@ -51,10 +51,6 @@ body{
     
   }
   
-  p{
-  
-  }
-  
   button{
     width:120px;
     height:40px;
@@ -66,6 +62,33 @@ body{
     font-size:11px;
     margin-top:20px;
   }
+
+  #profile-friends div{
+    display:flex;
+  }
+
+  #profile-friends div{
+    width:150px;
+    height:200px;
+    font-family: 'Black Han Sans', sans-serif;
+  }
+
+  #profile-friends img{
+    width:130px;
+    border-radius:10px;
+    text-align:center;
+  }
+
+  #profile-friends p{
+    text-align:center;
+ 
+  }
+
+
+
+
+
+
   /* ------------------------
   FOOTER 
   -------------------------- */
