--- a/app/public/assets/css/friends.css
+++ b/app/public/assets/css/friends.css
@@ -29,7 +29,7 @@ body{
       margin-left:10%;
       margin-right:10%;
       margin-top:5%;
-      margin-bottom:5%;
+      margin-bottom:8%;
   
       padding:1.5%;
       border-radius:10px; 
@@ -63,25 +63,46 @@ body{
     margin-top:20px;
   }
 
+#profile-friends{
+  display:flex;
+  flex-wrap: wrap;
+  align-items:baseline;
+
+}
+
   #profile-friends div{
-    display:flex;
+    /* display:flex; */
+    justify-content: center;
+    margin:10px;
+    margin-left: 20px;
+    margin-right:20px;
+    align-content: center;
   }
 
   #profile-friends div{
     width:150px;
-    height:200px;
+    height:220px;
     font-family: 'Black Han Sans', sans-serif;
   }
 
   #profile-friends img{
-    width:130px;
+    max-width:150px;
+    max-height:200px;
     border-radius:10px;
+    display:block;
     text-align:center;
+    position:relative;
+    margin: 0 auto;
+    align-content: center;
   }
 
   #profile-friends p{
     text-align:center;
- 
+    /* position:absolute; */
+    align-content: space-around;
+    /* bottom:400px; */
+    margin:5px;
+    margin-top:10px;
   }
 
 
