--- a/app/public/assets/css/survey.css
+++ b/app/public/assets/css/survey.css
@@ -10,6 +10,7 @@ body{
 hr{
     border:.5px solid rgb(162, 162, 162);
 }
+
 #survey{
     margin-left:2.5%;
     margin-right:62.5%;
@@ -19,14 +20,10 @@ hr{
     padding:1.5%;
     border-radius:10px; 
 }
+
 /* ------------------------
 HEADER 
 -------------------------- */
-
-header{
-    /* margin: 0 10%;
-    margin-top:2%; */
-}
 
 header h1{
     color:rgb(107, 107, 250);
@@ -52,8 +49,8 @@ header p{
     margin-bottom:5px;
     margin-top:25px;
     text-decoration: underline;
-    /* font-family: 'Black Han Sans', sans-serif; */
 }
+
 #about h4{
     font-size:14px;
 }
@@ -62,15 +59,10 @@ header p{
     margin-bottom:25px;
 }
 
-#about{
-    /* margin: 0 10%; */
-}
 /* ------------------------
 QUESTIONS 
 -------------------------- */
-#section{
-    /* margin:0 10%; */
-}
+
 input{
     width:100%;
     margin-bottom:15px;
@@ -85,11 +77,12 @@ label{
     display:inline-block;
     width:12%;
     margin:0 auto;
-    /* text-align:center; */
 }
+
 label img{
     width:13px;
 }
+
 .clarify-agree{
     font-size:12px;
     color:grey;
@@ -119,9 +112,6 @@ label img{
     font-family: 'Black Han Sans', sans-serif;
 }
 
-form{
-    /* margin-bottom:100px; */
-}
 button{
     width:80px;
     height:40px;
@@ -137,6 +127,7 @@ button{
     color:red;
     font-weight:bold;
     margin-top:5px;
+    text-align:center;
 }
 
 #modal-content{
@@ -148,16 +139,16 @@ button{
     max-width:100%;
 }
 
-
 #modal-content p{
     font-weight:bolder;
-
     text-align:center;
-    /* position:absolute; */
     align-content: space-around;
-    /* bottom:400px; */
     margin:5px;
     margin-top:10px;
+}
+
+#modal-content img{
+    max-height:400px;
 }
 
 /* ------------------------
